...
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personalDetailsHeader"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileNameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
...
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileEmailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
...
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailTextInputLayout"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profilePhoneView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Phone"
                    android:inputType="phone"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
...
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/academicDetailsHeader"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileUniversityView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="University"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
...
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/universityTextInputLayout"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileGraduationDateView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Graduation Date"
                    android:inputType="date"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
...
                app:boxStrokeColor="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/graduationDateTextInputLayout"
                android:layout_marginTop="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profileGpaView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="GPA"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
...
